themes/hootworks/static/assets/css/main.css
body {
    font-family: 'Montserrat', sans-serif;
    color: #3e3c46;
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.splash {
    background-color: #ffffff;
}

.splash a {
    color: #ff3d00;
}

.heading .spacer {
    padding-top: 50px;
}

.small-heading .spacer {
    padding-top: 20px;
}

.heading h1 {
    font-weight: 600;
    letter-spacing: 0.3em;
    font-size: 60px;
}

.small-heading h1 {
    font-weight: 600;
    letter-spacing: 0.3em;
    font-size: 30px;
}

.heading img.logo {
    height: 90px;
}

.small-heading img.logo {
    height: 45px;
}

.heading img.robot {
    margin-bottom: -40px;
}

.small-heading img.robot {
    height: 180px;
    margin-bottom: -15px;
}

.heading h5 {
    padding-top: 120px;
    line-height: 1.5em;
    font-weight: bold;
}

.small-heading h5 {
    padding-top: 20px;
    line-height: 1.5em;
    font-size: medium;
    font-weight: bold;
}

.small-heading p {
    font-size: small;
}

.heading .bullets li {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    list-style-type:square;
    font-size: small;
    line-height: 2.5em;
}

.fade-in {
  opacity: 0;
  transition: opacity 1s ease-in;
}

.fade-in.show {
  opacity: 1;
}

.global-nav {
    background: #e9eaea;
    padding-top: 10px;
    padding-bottom: 10px;
}

.global-nav .navbar-toggler {
    padding-right: 0;
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.global-nav ul {
    text-align: right;
}

.global-nav h1 {
    font-weight: 600;
    letter-spacing: 0.2em;
    font-size: 20px;
}

.global-nav img.logo {
    height: 30px;
}

.global-nav a {
    text-decoration: none;
    color: #3e3c46;
}

.global-nav a:hover {
    text-decoration: none;
    color: #ff3d00;
}

.global-nav li.nav-item {
    display: block;
}

.global-nav li.nav-item a {
    text-decoration: none;
    color: #ff3d00;
    display: inline;
}

.global-nav li.nav-item a:hover {
    text-decoration: underline;
}

.ground {
    background: linear-gradient(#eee, #e9eaea);
    height: 50px;
}

.footer {
    background: #e9eaea;
    font-size: x-small;
}

.footer a.u-email {
    background: #e9eaea;
    font-size: medium;
    color: #ff3d00;
}

.footer a.u-email:hover,a:active {
    text-decoration: underline;
}

.copyright {
    color: #6e6c76;
}

.copyright a {
    color: #6e6c76;
    text-decoration: underline;
}

.page-nav {
    padding-left: 2.5em;
    background-color: #c3c6cc;
    color: #333;
    font-size: small;
}

.page-nav {
    padding-top: 1em;
    padding-bottom: 0;
}

.page-nav .page-link {
    color: #333;
    padding: 0.25rem 0.5rem;
}

.page-nav .page-item.active .page-link {
    background-color: #6e6c76;
    border-color: #6e6c76;
}

.page-nav .page-item .page-link:hover {
    color: #ff3d00;
}

.page-nav .page-item.active .page-link:hover {
    color: #ffffff;
}

.page-item:last-child .page-link, .page-item:first-child .page-link {
    border-radius: 0;
}

.news-sub-nav {
    font-size: small;
    padding-top: 1.5em;
    color: #333;
    line-height: 8px;
}

.news-sub-nav h1 {
    font-size: 1.8rem;
    margin-bottom: 0px;
}

.news-sub-nav .navbar-expand .navbar-nav .nav-link {
    padding-top: 1em;
    padding-left: 0px;
}

.news-sub-nav a {
    color: #ff3d00;
}

.news-sub-nav a:hover,
.news-sub-nav a.active {
    text-decoration: underline;
}

.sub-nav {
    font-size: small;
    padding-left: 1.5em;
    color: #333;
    line-height: 8px;
    padding-top: 0.5em;
    padding-bottom: 0em;
}

a.tag {
    font-size: xx-small;
    color: #ff3d00;
    font-weight: normal;
    border: 1px solid #e9ecef;
    display: inline;
    line-height: 10px;
}

a.tag:hover,
a.tag:active,
a.tag.active {
    border-color: #ff3d00;
}

.content {
    font-size: small;
    min-height: 40em;
    padding-top: 2em;
    padding-bottom: 2em;
}

.content label {
    font-size: small;
}

.content .form-control {
    font-size: small;
    border-color: #e9ecef;
}

.content a {
    color: #ff3d00;
}

.content h1 {
    font-size: 1.8rem;
    padding-top: 0.5em;
    padding-bottom: 0.8em;
}

.content h2 {
    font-size: 1.4rem;
}

.content h3 {
    font-size: 1.1rem;
}

.content a:hover,
.content a:active {
    text-decoration: underline;
    color: #ff3d00;
}

.content .btn-primary {
    background-color: #fff;
    color: #3e3c46;
    border: 1px solid #e9ecef;
    font-weight: normal;
    font-size: small;
}

.content .btn-primary:hover,
.content .btn-primary:active,
.content .btn-primary:focus {
    background-color: #fff !important;
    color: #ff3d00 !important;
    border-color: #ff3d00 !important;
}

.content-divider div {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.content-divider:first-child div {
    display: none;
}

.content-date {
    vertical-align: top;
    line-height: 12px;
    padding-left: 1em;
    font-size: small;
}

.content-title h1 {
    line-height: 14px;
    vertical-align: text-top;
    padding-bottom: 0.5em;
}

.content-title a {
    line-height: 14px;
    text-decoration: none;
    color: #333;
    vertical-align: text-top;
}

.content-title a:hover,
.content-title a:active {
    text-decoration: none;
    color: #ff3d00;
}

.content-tags {
    top: -5px;
    font-size: small;
}

.content-tags a.tag {
    font-weight: normal;
    border: 1px solid #e9ecef;
    display: inline;
    line-height: 10px;
}

.content-tags a.tag:hover,
.content-tags a.tag.active {
    border-color: #ff3d00;
}

.content-body  {
    font-size: small;
}

.content-more  {
    padding-top: 0.5em;
}


.cc-window {
    font-family: 'Montserrat', sans-serif;
    font-size: 12px;
    line-height: 1.3em;
}

.cc-banner.cc-theme-edgeless .cc-btn {
    padding: 0.6em;
    min-width: 80px;
}

@media screen and (max-width: 414px) and (orientation: portrait), screen and (max-width: 736px) and (orientation: landscape) {
    .cc-window .cc-message {
        margin: 0.5em;
    }
}

.resp-sharing-button__link,
.resp-sharing-button__icon {
    display: inline-block
}

.resp-sharing-button__link {
    text-decoration: none;
}

.resp-sharing-button {
    border-radius: 5px;
    transition: 25ms ease-out;
    padding: 0.3em 0.5em;
    border: 1px solid #e9ecef;
}

.resp-sharing-button:hover,
.resp-sharing-button:active {
    border-color: #ff3d00;
    fill: #ff3d00;
}

.resp-sharing-button__icon svg {
    width: 1em;
    height: 1em;
    margin-right: 0.4em;
    vertical-align: top
}

.resp-sharing-button--small svg {
    margin: 0;
    vertical-align: middle
}

.resp-sharing-button__icon--solid {
    stroke: none;
}

.resp-sharing-button--email {
    fill: #777;
}

.resp-sharing-button--reddit {
    fill: #5f99cf;
}

.resp-sharing-button--linkedin {
    fill: #0077b5;
}

.resp-sharing-button--hackernews {
    fill: #ff6600;
}

.portrait-frame {
    border-radius: 18px;
    box-shadow: 0 4px 24px rgba(0,0,0,0.12), 0 1.5px 6px rgba(0,0,0,0.08);
    border: 3px solid #fff;
    background: #f8f9fa;
    padding: 4px;
    transition: box-shadow 0.2s;
}

